@@ -21,6 +21,14 @@ location on Mac in your Xcode preferences.  On Windows, the <tt>WEBKITOUTPUTDIR<
 set a different build products location.  If you have set up a custom build location, then <tt>build-webkit</tt> will
 place the build products there.</p>
 
+<div class="windows-instructions">
+<h4>Windows</h4>
+<p>A common source of build errors on Windows is Visual C++ Express forgetting the Platform SDK paths.  If you have trouble building WebKit,
+double check that the paths you set during <a href="http://msdn.microsoft.com/vstudio/express/visualc/usingpsdk/">step 3 of the Platform SDK Installation</a>
+are still there and add them again if necessary.</p>
+<p>Don't forget that if you have any questions or problems building WebKit, feel free to <a href="/contact.html">get in touch!</a></p>
+</div>
+
 <h2>Setting a Default Configuration</h2>
 <ol>
 <li><p>To set a default build configuration for <tt>build-webkit</tt> and other scripts, use the <tt>set-webkit-configuration</tt> script:</p>
