@@ -1,3 +1,9 @@
+2007-07-06  Matt Lilek  <pewtermoose@gmail.com>
+
+        Reviewed by Adam Roben.
+
+        * building/build.html:
+
 2007-07-02  Mitz Pettel  <mitz@webkit.org>
 
         Reviewed by Darin.
